Fix textarea overflow issue. Move booking notes to a seprate component to make mobile UI implementation easier.

--- a/src/app/pages/body/body.component.scss
+++ b/src/app/pages/body/body.component.scss
@@ -13,7 +13,7 @@ $btn-active-color: #ddd;
 
 
   .field-section {
-    width: 100%;
+    width: 47%;
     margin-left: 10px;
     margin-right: 10px;
 
@@ -24,9 +24,8 @@ $btn-active-color: #ddd;
     .fields {
       display: grid;
       grid-template-columns: min-content max-content auto 5em;
-      width: auto;
-      max-width: 700px;
-      margin: 16px auto 16px 0;
+      width: 98%;
+      margin: 16px auto 16px auto;
 
       .title {
         border-bottom: 1px solid #666666;
@@ -52,31 +51,13 @@ $btn-active-color: #ddd;
 
       .text-area {
         grid-column: 1/-1;
+        resize: vertical;
+        overflow-x: auto;
       }
     }
   }
 
-  .output-section {
-    width: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
-
-    .fields-header {
-      display: flex;
-    }
-
-    .fields {
-      display: grid;
-      grid-template-columns: min-content max-content auto;
-      width: auto;
-      max-width: 700px;
-      margin: 16px auto 16px 0;
-
-      .text-area {
-        grid-column: 1/-1;
-        min-height: 250px;
-        white-space: pre;
-      }
-    }
+  .booking-notes {
+    width: 47%;
   }
 }
